--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -660,7 +660,7 @@
 													</tr>
 													{{each items as item i}}
 													<tr class="table-centent">
-														<td><a href="/bbs/{{item.id}}">{{item.content}}</a></td>
+														<td><a href="/bbs/{{item.id}}">{{item.title}}</a></td>
 														<td>{{item.labelName}}</td>
 														<td>{{item.initTime}}</td>
 													</tr>
