增加提交--表单。修改表单链接

--- a/wechat/src/main/webapp/xcview/html/all_user_comment.html
+++ b/wechat/src/main/webapp/xcview/html/all_user_comment.html
@@ -95,7 +95,7 @@
 			<div class="wrap_comment_text">
 				<!--头像-->
 				<div class="user_header">
-					<img src="{{item.onlineUser.smallHeadPhoto}}"/>
+					<img src="{{item.onlineUser.smallHeadPhoto}}" onerror="nofinds();"/>
 				</div>
 				<!--右边评论-->
 				<div class="user_text">
