--- a/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- 报名头部结束 -->
-<script id="entry_information_temp" type="text/html">
+<script id="apply" type="text/html">
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
@@ -93,7 +93,7 @@
 		</div>
 		<div class="both"></div>
 	</div>
-	</script>
+</script>
 </body>
 <!-- 中间内容结束 -->
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
