--- a/wechat/src/main/webapp/xcview/html/buy_prosperity.html
+++ b/wechat/src/main/webapp/xcview/html/buy_prosperity.html
@@ -68,7 +68,7 @@
 							</div>
 							<div class="both"></div>
 							<div class="purchase_details_money"><span></span>熊猫币</div>
-							<div class="prosperity_play" onclick="jump()">去学习</div>
+							<div class="prosperity_play" onclick="jump()">查看详情</div>
 						</div>
 					</div>
 				</div>
