--- a/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
+++ b/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
@@ -24,7 +24,8 @@
 
 		<!--   直播区域    -->
 		<div class="livePlayer" style="position: relative;padding-right: 310px;">
-			 <div style="position: absolute;bottom: 0;left: 200px;"><label style="color: #fff;font-weight: 400;"><input id="auto_play" type="checkbox" name="" id="" /> 自动打开下一课时</label></div>  
+			 <div style="position: absolute;bottom: 0;left: 200px;"><label style="color: #fff;font-weight: 400;">
+			 <input id="auto_play" type="checkbox" /> 自动打开下一课时</label></div>  
 
 			<!--弹幕得div-->
 			<div id='boxDom' style="background-color: transparent;position: absolute; height: 100%;z-index:9"></div>
