--- a/online-web/src/main/webapp/web/html/school/details-video.html
+++ b/online-web/src/main/webapp/web/html/school/details-video.html
@@ -29,7 +29,9 @@
 				<div class="left-cover z">
 					<img src="../../images/banner-wrap.jpg" />
 					<div class="progress" style="position: absolute;bottom: 0;left: 0;width: 100%;margin-bottom: 0;height: 14px;">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;background: #00BC12;">
+						<div class="progress-bar progress-bar-success" role="progressbar" 
+						 aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" 
+						  style="width: 90%;background: #00BC12;">
 							<span class="sr-only">90% 完成（成功）</span>
 						</div>
 					</div>
