--- a/wechat/src/main/webapp/xcview/html/buy_prosperity.html
+++ b/wechat/src/main/webapp/xcview/html/buy_prosperity.html
@@ -29,7 +29,97 @@
  	.boutique_main_one_size .P1 span{
  		font-size: 0.24rem !important;
  	}
- 	
+ 	.boutique_title{
+ 		margin-left: 0;
+ 	}
+ 	.hint{
+ 		width: 7.5rem;
+ 		height: 3.92rem;
+ 		background: #fff;
+ 		margin-top: 0.2rem;
+ 	}
+ 	.hint_main{
+ 		width: 7.24rem;
+ 		float: right;
+ 	}
+ 	.hint_name{
+	 	width: 100%;
+ 		height: 0.98rem;
+ 		line-height: 0.98rem;
+ 		border-bottom: 1px solid #f0f0f0;
+ 	}
+ 	.hint_name div{
+ 		width: 45%;
+		font-size: 0.28rem;
+		color: #333333;
+ 	}
+	.hint_name_left{
+		float: left;
+	}
+	.hint_name_right{
+		float: right;
+		text-align: right;
+		padding-right: 0.26rem;
+	}
+
+	.hint_tel{
+	 	width: 100%;
+ 		height: 0.98rem;
+ 		line-height: 0.98rem;
+ 		border-bottom: 1px solid #f0f0f0;
+ 	}
+ 	.hint_tel div{
+ 		width: 45%;
+		font-size: 0.28rem;
+		color: #333333;
+ 	}
+	.hint_tel_left{
+		float: left;
+	}
+	.hint_tel_right{
+		float: right;
+		text-align: right;
+		padding-right: 0.26rem;
+	}
+
+	.hint_wx{
+	 	width: 100%;
+ 		height: 0.98rem;
+ 		line-height: 0.98rem;
+ 		border-bottom: 1px solid #f0f0f0;
+ 	}
+ 	.hint_wx div{
+ 		width: 45%;
+		font-size: 0.28rem;
+		color: #333333;
+ 	}
+	.hint_wx_left{
+		float: left;
+	}
+	.hint_wx_right{
+		float: right;
+		text-align: right;
+		padding-right: 0.26rem;
+	}
+
+	.hint_sex{
+	 	width: 100%;
+ 		height: 0.98rem;
+ 		line-height: 0.98rem;
+ 	}
+ 	.hint_sex div{
+ 		width: 45%;
+		font-size: 0.28rem;
+		color: #333333;
+ 	}
+	.hint_sex_left{
+		float: left;
+	}
+	.hint_sex_right{
+		float: right;
+		text-align: right;
+		padding-right: 0.26rem;
+	}
  </style>
 <body style="background: #F8F8F8;">
 	<!--头部搜索开始-->
@@ -44,7 +134,6 @@
 		</div>	
 	</div>
 	<!--头部搜索结束-->
-	
 	
 	<!--中间内容开始-->
 	<div class="prosperity">
@@ -77,6 +166,34 @@
 			<div class="check_one">查看已购课程，请前往<span>学习中心</span></div>
 			<div class="check_two">继续寻找感兴趣的课程，请前往<span>学堂</span></div>
 		</div>
+
+		<div class="hint">
+			<div class="hint_main">
+				<div class="hint_name">
+					<div class="hint_name_left">姓名</div>
+					<div class="hint_name_right">测试</div>
+					<div class="both"></div>
+				</div>
+				<div class="hint_tel">
+					<div class="hint_tel_left">手机号</div>
+					<div class="hint_tel_right">15054054532</div>
+					<div class="both"></div>
+				</div>
+				<div class="hint_wx">
+					<div class="hint_wx_left">微信号</div>
+					<div class="hint_wx_right">hl798654</div>
+					<div class="both"></div>
+				</div>
+				<div class="hint_sex">
+					<div class="hint_sex_left">性别</div>
+					<div class="hint_sex_right">男</div>
+					<div class="both"></div>
+				</div>
+			</div>
+			<div class="both"></div>
+		</div>
+	
+
 		<!--猜你喜欢开始-->
     	<div class="acupuncture">
     		<div class="boutique_title">猜你喜欢</div>
