--- a/online-web/src/main/webapp/web/html/school/school-recommend.html
+++ b/online-web/src/main/webapp/web/html/school/school-recommend.html
@@ -26,8 +26,8 @@
 		<div class="wp">
 			<div class="wrap-left z">
 				<div class="wrap-banner">
-					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-					  <ol class="carousel-indicators">
+					<div id="carousel-example-generic" class="carousel slide hover-select" data-ride="carousel">
+					  <ol class="carousel-indicators" id="select-slide">
 					  
 					  
 					    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -51,7 +51,15 @@
 					     		<img src="../../images/banner-wrap.jpg" alt="广告图">
 					     	</a>
 					    </div>
-					  </div>	
+					  </div>
+					   <!-- Controls -->
+					  <a class="left carousel-control banner-prev" href="#carousel-example-generic" role="button" data-slide="prev">
+					    <em></em>
+					  </a>
+					  <a class="right carousel-control banner-prev banner-next" href="#carousel-example-generic" role="button" data-slide="next">
+					     <em></em>
+					  </a>
+					</div>
 					</div>
 				</div>
 				<div class="physic-type">
