线下班按照原来的接口写的代码

--- a/wechat/src/main/webapp/xcview/html/buy_prosperity.html
+++ b/wechat/src/main/webapp/xcview/html/buy_prosperity.html
@@ -167,26 +167,26 @@
 			<div class="check_two">继续寻找感兴趣的课程，请前往<span>学堂</span></div>
 		</div>
 
-		<div class="hint">
+		<div class="hint" style="display:none;">
 			<div class="hint_main">
 				<div class="hint_name">
 					<div class="hint_name_left">姓名</div>
-					<div class="hint_name_right">测试</div>
+					<div class="hint_name_right"></div>
 					<div class="both"></div>
 				</div>
 				<div class="hint_tel">
 					<div class="hint_tel_left">手机号</div>
-					<div class="hint_tel_right">15054054532</div>
+					<div class="hint_tel_right"></div>
 					<div class="both"></div>
 				</div>
 				<div class="hint_wx">
 					<div class="hint_wx_left">微信号</div>
-					<div class="hint_wx_right">hl798654</div>
+					<div class="hint_wx_right"></div>
 					<div class="both"></div>
 				</div>
 				<div class="hint_sex">
 					<div class="hint_sex_left">性别</div>
-					<div class="hint_sex_right">男</div>
+					<div class="hint_sex_right"></div>
 					<div class="both"></div>
 				</div>
 			</div>
