--- a/online-web/src/main/webapp/web/html/registration_sites.html
+++ b/online-web/src/main/webapp/web/html/registration_sites.html
@@ -26,7 +26,7 @@
 		<div class="main">
 			<div class="title">填写报名信息</div>
 			<div class="hint">
-				<div class="img"><img src="/web/images/examine.png" alt="" /></div>
+				<div class="img"><img src="/web/images/buy-success.png" alt="" /></div>
 				<div class="size">为保障您的个人权益，请填写相应信息，便于活动提醒、入场时的身份确认、以及特殊通知的送达，以确保您能顺利进入会场，避免他人冒充。</div>
 				<div class="both"></div>
 			</div>
