纠正报名回显页面模板名称，修改批处理

--- a/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- 报名头部结束 -->
-<script id="apply" type="text/html">
+<script id="entry_information_temp" type="text/html">
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
