--- a/online-web/src/main/webapp/web/html/registration_sites.html
+++ b/online-web/src/main/webapp/web/html/registration_sites.html
@@ -24,7 +24,7 @@
 
 	<body>
 		<div class="main">
-			<div class="title">填写报名信息的点点滴滴多多多</div>
+			<div class="title">填写报名信息</div>
 			<div class="hint">
 				<div class="img"><img src="/web/images/buy-success.png" alt="" /></div>
 				<div class="size">为保障您的个人权益，请填写相应信息，便于活动提醒、入场时的身份确认、以及特殊通知的送达，以确保您能顺利进入会场，避免他人冒充。</div>
@@ -54,9 +54,9 @@
 					<div class="sexs">性别</div>
 					<div class="select">
 						<select name="" id="">
-							<option value="">请sasadcsdc选择</option>
+							<option value="">请选择</option>
 							<option value="">男</option>
-							<option value="">女dsfsdv</option>
+							<option value="">女</option>
 						</select>
 					</div>
 				</div>
