--- a/online-web/src/main/webapp/web/html/registration_sites.html
+++ b/online-web/src/main/webapp/web/html/registration_sites.html
@@ -20,6 +20,9 @@
 		<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
 
 		<link rel="stylesheet" href="/web/css/registration_sites.css" />
+		<style>
+
+		</style>
 	</head>
 
 	<body>
@@ -34,7 +37,7 @@
 				<div class="name">
 					<div class="xx">*</div>
 					<div class="names">姓名</div>
-					<div class=""><input type="text" /></div>
+					<div class="input"><input type="text" /></div>
 				</div>
 				<div class="both"></div>
 				<div class="tel">
@@ -43,9 +46,9 @@
 					<div class="input"><input type="tel" /></div>
 				</div>
 				<div class="both"></div>
-				<div class="wexin">
-					<div class="">*</div>
-					<div class="wexins">微信号</div>
+				<div class="weixin">
+					<div class="xx">*</div>
+					<div class="weixins">微信号</div>
 					<div class="input"><input type="text" /></div>
 				</div>
 				<div class="both"></div>
@@ -74,6 +77,7 @@
 		<script src="/web/html/school/school-header/header.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="/web/js/footer.js"></script>
 		<!--公共头部和底部结束-->
-
 		<!--登陆结束-->
+		
+		
 </html>
