--- a/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/online-web/src/main/webapp/web/html/liveVideo.html
@@ -435,6 +435,9 @@
 						<p>充值数量</p>
 						<div class='item_content content_two'>
 							<ul>
+								<li data-value='0.1' class="dian">0.1个 <i
+									class="ico i-selector"></i>
+								</li>
 								<li data-value='5' class='orange dian'>50个 <i
 									class="ico i-selector show"></i>
 								</li>
@@ -450,6 +453,7 @@
 								<li data-value='100' class="dian">1000个 <i
 									class="ico i-selector"></i>
 								</li>
+								
 							</ul>
 						</div>
 					</div>
