修改微信线下课报名

--- a/wechat/src/main/webapp/xcview/html/school_class.html
+++ b/wechat/src/main/webapp/xcview/html/school_class.html
@@ -300,12 +300,12 @@
 							</a>
 							{{else}}
 							<a class="right_priceBtn y" href="javascript:;" onclick="btn_zj_mianfei()" data-zj="2">
-								进入学习
+								立即学习
 							</a>
 						{{/if}}
 					{{else if watchState==2 || watchState==3}}
 					<a class="right_priceBtn y" href="javascript:;" onclick="btn_zj_mianfei()" data-zj="2">
-						进入学习
+						已报名
 					</a>	
 
 					{{/if}}
