--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -134,14 +134,14 @@
 								</ul>
 							</li>
 							<li data-menu="menu6">
-								<div class="link" data-menu="menu6" data-load="load-news"><i class="iconfont icon-ziyuan" style="font-size: 14px;top: 26px;"></i>消息</div>
+								<div class="link" data-menu="menu6" data-load="load-news"><i class="iconfont icon-ziyuan" style="font-size: 13px;top: 23px;"></i>消息</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">认证信息</a></li>
 									<li><a href="javascript:;">主播信息</a></li>-->
 								</ul>
 							</li>
 							<li data-menu="menu7">
-								<div class="link" data-menu="menu7"><i class="iconfont icon-yijianfankui"style="top: 23px;"></i>意见反馈</div>
+								<div class="link" data-menu="menu7"><i class="iconfont icon-yijianfankui"style="top: 21px;"></i>意见反馈</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">认证信息</a></li>
 									<li><a href="javascript:;">主播信息</a></li>-->
@@ -764,7 +764,7 @@
 													<div class="order-status">
 														<ul>
 															<li><span>{{item.create_time}}</span></li>
-															<li style="width: 230px;">订单编号：<span>{{item.order_no}}</span></li>
+															<li style="width: 230px;" title="{{item.order_no}}">订单编号：<span>{{item.order_no}}</span></li>
 															<li>订单金额（熊猫币）</li>
 															<li>实付金额</li>
 															<li>订单状态</li>
