--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -665,8 +665,10 @@
 			<ul class="submenu">
 				<li><a onclick="getCourseList()"  data-name="menu=1-1" href="javascript:;">课程</a></li>
 				<li><a onclick="getZhuanjiList()" data-name="menu=1-2" href="javascript:;">专辑</a></li>
-				<li><a onclick="getLiveList()" data-name="menu=1-3" href="javascript:;">直播</a></li>
-				<li><a onclick="getResourceList()" data-name="menu=1-4" href="javascript:;">资源</a></li>
+				<li><a onclick="getLiveList()" data-name="menu=1-3" href="javascript:;">直播</a></li>	
+				<li><a data-name="menu=1-4" href="javascript:;">学员</a></li>
+				<li><a onclick="getResourceList()" data-name="menu=1-5" href="javascript:;">资源</a></li>
+				
 			</ul>
 		</li>
 		<li  data-name="menu=2-1">
@@ -1247,8 +1249,48 @@
 				</div>
 			</div>
 	
-			<!--排课-->
-			<!--<div class="little_box">排课</div>-->
+			<!--学员-->
+			<div class="little_box hide" style="padding: 0;">
+				<div class="trainee-title">
+					<h5>学员管理</h5>
+				</div>
+				<div class="trainee-main">
+					<div class="trainee-class-select">
+						<span>选择课程：</span>
+						<select name="">
+							<option value="">1</option>
+						</select>
+					</div>
+					<div class="trainee-table">
+						<table border="0" cellspacing="0" cellpadding="0">
+							<tr>
+								<th>姓名</th>
+								<th>手机号</th>
+								<th>微信号</th>
+								<th>性别</th>
+								<th>课程名称</th>
+								<th>报名时间</th>
+								<th>是否已上课</th>
+								<th>操作</th>
+							</tr>
+							<tr>
+								<td>网大哥</td>
+								<td>16608913303</td>
+								<td>16608913303</td>
+								<td>男</td>
+								<td>针灸针灸针灸感冒感冒</td>
+								<td>2018-12-05 12:15:13</td>
+								<td>是</td>
+								<td>
+									<span class="">查看</span>
+									<span class="">设置上课</span>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+			
 			<!--资源-->
 			<div class="little_box hide" id="resource">
 				<div class="resource_one">
@@ -1359,6 +1401,8 @@
 				</div>
 				<!--点击资源出现弹框结束-->
 			</div>
+		
+			
 		</div>
 	
 		<!--我的资产部分-->
@@ -2577,6 +2621,9 @@
 	</div>
 </div>
 
+<!--学员查看/设置上课弹窗-->
+<div class="trainee-modal hide"></div>	
+
 <script type="text/javascript" src="/web/js/footer.js"></script>
 <script type="text/javascript" src="/web/js/placeHolder.js"></script>
 <script type="text/javascript" src="/web/js/cropbox.js"></script>
@@ -2863,12 +2910,11 @@
 <script>	
 //页面进入之后左侧tab定位
 $(function(){
-		debugger
 		if(!location.hash){
         	location.hash = "#menu=1-1";
 		}
     	var hash = location.hash;
-		if(location.hash == "#menu=1-1" || location.hash == "#menu=1-2" || location.hash == "#menu=1-3" || location.hash == "#menu=1-4"){
+		if(location.hash == "#menu=1-1" || location.hash == "#menu=1-2" || location.hash == "#menu=1-3" || location.hash == "#menu=1-4" || location.hash == "#menu=1-5"){
 	    	$("#accordion li[data-name='menu=1-1']").click();
 	    	$("#accordion li[data-name='menu=1-1']").addClass('open');
 	    	$("#accordion li[data-name='menu=1-1'] .submenu").css('display','block')
@@ -2904,6 +2950,10 @@ $(function(){
 	if(hash == '#menu=1-4'){
 		location.hash = 'menu=1-4';
 		 $("#accordion a[data-name='menu=1-4']").click();
+	}
+	if(hash == '#menu=1-5'){
+		location.hash = 'menu=1-5';
+		 $("#accordion a[data-name='menu=1-5']").click();
 	}
 	if(hash == '#menu=3-2'){
 		location.hash = 'menu=3-2';
