--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -1282,8 +1282,8 @@
 								<td>2018-12-05 12:15:13</td>
 								<td>是</td>
 								<td>
-									<span class="">查看</span>
-									<span class="">设置上课</span>
+									<span class="trainee-preview">查看</span>
+									<span class="trainee-set">设置上课</span>
 								</td>
 							</tr>
 						</table>
