页眉实力修改

--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="/web/css/componet-pages.css" />
 		<!--分页部分end-->
 		<link rel="stylesheet" href="/web/css/index.css" />
-		<link rel="stylesheet" href="/web/css/header.css" />
+		<link rel="stylesheet" href="/web/html/header-hospital/header.css" />
 		<link rel="stylesheet" href="/web/css/footer.css" />
 
 		<link rel="stylesheet" href="/web/font/iconfont.css" />
@@ -42,7 +42,7 @@
 		<!-----引用layer------>
 		<script type="text/javascript" src="/web/js/helpers.js"></script>
 		<script src="/web/js/ajax.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/web/js/header.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/web/html/header-hospital/header.js" type="text/javascript" charset="utf-8"></script>
 		<!--分页部分start-->
 		<script src="/web/js/anchor/pages/jquery.pagination-course.js"></script>
 		<!--分页部分start-->
