--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="/web/css/mylogin.css"/>
 	<link rel="stylesheet" href="/web/css/componet.css"/>
 	<link rel="stylesheet" href="/web/css/index.css"/>
-	<link rel="stylesheet" href="/web/css/header.css"/>
+	<link rel="stylesheet" href="/web/html/anchor/header-work/header.css"/>
 	<link rel="stylesheet" href="/web/css/footer.css"/>
 	<link rel="stylesheet" href="/web/css/anchor/cssreset-min.css"/>  <!--省市-->
 
@@ -59,7 +59,7 @@
 	<!-----引用layer------>
 	<script type="text/javascript" src="/web/js/helpers.js"></script>
 	<script src="/web/js/ajax.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/web/js/header.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/web/html/anchor/header-work/header.js" type="text/javascript" charset="utf-8"></script>
 
 	<link rel="stylesheet" type="text/css" href="/web/bootstrap-select/bootstrap-select.css">
 	<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
