--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="/web/css/mylogin.css" />
 		<link rel="stylesheet" href="/web/css/componet.css" />
 		<link rel="stylesheet" href="/web/css/index.css" />
-		<link rel="stylesheet" href="/web/css/header.css" />
+		<link rel="stylesheet" href="/web/html/header-physician/header.css" />
 		<link rel="stylesheet" href="/web/css/footer.css" />
 
 		<link rel="stylesheet" href="/web/font/iconfont.css" />
@@ -50,7 +50,7 @@
 		<!-----引用layer------>
 		<script type="text/javascript" src="/web/js/helpers.js"></script>
 		<script src="/web/js/ajax.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/web/js/header.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/web/html/header-physician/header.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/web/js/common_msg.js" type="text/javascript"></script>
 		<!--分页部分start-->
 		<script src="/web/js/anchor/pages/jquery.pagination-course.js"></script>
