直播回放--添加测试。线下课做回显。发现刷新测试弹框删除。

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -185,6 +185,9 @@ $(function(){
 .coze_cen_ris{
 	margin-bottom: 0rem !important;
 } 
+#video{
+	background: none;
+}
 </style>
 </head>
 <body style="background: #f8f8f8;overflow: hidden1;">
@@ -244,9 +247,9 @@ $(function(){
 		<!--直播结束查看回放提示-->
 
 		<!--直播结束，正在生成回放提示-->
-		<div class="video_end_top2" style="display: none;">
+		<div class="video_end_top2" style="display1: none;">
 			<p>直播结束，正在生成回放…</p>
-			<div class="initiation">学习中心</div>
+			<div class="initiation" onclick="location.href ='/xcview/html/my_study.html'">学习中心</div>
 		</div>
 		<!--直播结束，正在生成回放提示-->
 
