修改--边框色值。

--- a/wechat/src/main/webapp/xcview/html/curriculum_table.html
+++ b/wechat/src/main/webapp/xcview/html/curriculum_table.html
@@ -64,7 +64,6 @@
 	float: left;
 	margin-left: 0.05rem;
 }	
-	
 .zhibo_play_list{
 	border: 1px solid #F97B49;
     border-radius: 3px;
@@ -77,8 +76,12 @@
 .li_list_main{
 	height: 100%;
 }
-	
-	
+.li_list_one_right .p00{
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
+}
 </style>
 </head>
 <body style="background: #F8F8F8;background1: red;">
