--- a/wechat/src/main/webapp/xcview/html/live_class.html
+++ b/wechat/src/main/webapp/xcview/html/live_class.html
@@ -122,16 +122,17 @@
 	<!--内容-->
 		<div class="wrap">
 			<p></p>
-			<div class="no_data">暂无数据...</div>
+			<div class="no_data">暂无课程介绍...</div>
 			<div class="zhezhao" style="display: none;">
 				<img src="../images/op_bg.png"/>	
 			</div>     
 			
 		</div>
-		<div class="btn" style="display: none;">
+		<!-- 隐藏点击收起 -->
+		<!-- <div class="btn" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
-		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #D8DDE6;">
+		</div> -->
+		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
 			
 		</div>
 	<!--主讲人-->
@@ -144,14 +145,15 @@
 	<!--内容-->
 		<div class="wrap1">
 			<p></p> 
-			<div class="no_data1">暂无数据...</div>
+			<div class="no_data1">暂无主讲人介绍...</div>
 			<div class="zhezhao1" style="display: none;">
 				<img src="../images/op_bg.png"/>	
 			</div>     
 		</div>
-		<div class="btn1" style="display: none;">
+		<!-- 隐藏点击收起 -->
+		<!-- <div class="btn1" style="display: none !important;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
@@ -263,6 +265,7 @@
 		<img src="../images/no_comment.png"/>	
 		<p>还没有评价？快来抢沙发呀~</p>
 	</div>
+	<div class="" style="width: 7.5rem;height: 1.2rem;opacity: 0;"></div>
 			<!--底下评论输入框-->
 			<div class="wrap_user_input">
 				<div class="wrap_input z">
