学堂-分类-边框色值。线下课-专辑-边框色值修改，去掉点击收起效果。

--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -126,7 +126,7 @@
 	<!--内容-->
 		<div class="wrap1">
 			<p></p> 
-			<div class="no_data1">暂无数据...</div>
+			<div class="no_data1">暂无主讲人介绍...</div>
 			<div class="zhezhao1" style="display: none;">
 				<img src="../images/op_bg.png"/>	
 			</div>     
@@ -134,7 +134,7 @@
 		<div class="btn1" style="display: none;">
 			<img src="../images/top.png"/>
 		</div>
-		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #D8DDE6;">
+		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
 			
 		</div>
 		<!--简介-->
@@ -149,7 +149,7 @@
 	<!--内容-->
 		<div class="wrap">
 			<p></p>
-			<div class="no_data">暂无数据...</div>
+			<div class="no_data">暂无课程介绍...</div>
 			<div class="zhezhao" style="display: none;">
 				<img src="../images/op_bg.png"/>	
 			</div>     
