--- a/wechat/src/main/webapp/xcview/html/school_class.html
+++ b/wechat/src/main/webapp/xcview/html/school_class.html
@@ -126,14 +126,15 @@
 	<!--内容-->
 		<div class="wrap1">
 			<p></p> 
-			<div class="no_data1">暂无数据...</div>
+			<div class="no_data1">暂无主讲人介绍...</div>
 			<div class="zhezhao1" style="display: none;">
 				<img src="../images/op_bg.png"/>	
 			</div>     
 		</div>
-		<div class="btn1" style="display: none;">
+		<!-- 点击收起隐藏 -->
+		<!-- <div class="btn1" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #D8DDE6;">
 			
 		</div>
@@ -149,15 +150,16 @@
 	<!--内容-->
 		<div class="wrap">
 			<p></p>
-			<div class="no_data">暂无数据...</div>
+			<div class="no_data">暂无课程介绍...</div>
 			<div class="zhezhao" style="display: none;">
 				<img src="../images/op_bg.png"/>	
 			</div>     
 			
 		</div>
-		<div class="btn" style="display: none;">
+		<!-- 点击收起隐藏 -->
+		<!-- <div class="btn" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
