--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -217,16 +217,17 @@
 	<!--内容-->
 		<div class="wrap">
 			<p></p>
-			<div class="no_data">暂无数据...</div>
+			<div class="no_data">暂无课程介绍..</div>
 			<div class="zhezhao" style="display: none;">
 				<img src="../images/op_bg.png"/>	
 			</div>     
 			
 		</div>
-		<div class="btn" style="display: none;">
+		<!-- 点击收起隐藏 -->
+		<!-- <div class="btn" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
-			<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #D8DDE6;">
+		</div> -->
+			<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
 			
 		</div>
 	<!--主讲人-->
@@ -239,14 +240,15 @@
 	<!--内容-->
 		<div class="wrap1">
 			<p></p> 
-			<div class="no_data1">暂无数据...</div>
+			<div class="no_data1">暂无主讲人介绍...</div>
 			<div class="zhezhao1" style="display: none;">
 				<img src="../images/op_bg.png"/>	
 			</div>     
 		</div>
-		<div class="btn1" style="display: none;">
+		<!-- 点击收起隐藏 -->
+		<!-- <div class="btn1" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
@@ -363,6 +365,7 @@
 		<!-- <span onclick="btn_allComment()">去评价</span> -->
 	</div>
 	
+	<div class="" style="max-width:7.5rem;height:1.2rem;opcity:0;"></div>
 	
 	<!--底下评论输入框-->
 	<div class="wrap_user_input">
