--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -77,7 +77,7 @@
 				<p class="p0" id="courseNumber">0</p>
 				<p class="p1">已购课程</p>
 			</li>
-			<li style="border-left: 1px solid #D8DDE6;" onclick="go_cnlogin()">
+			<li style="border-left: 1px solid #f0f0f0;" onclick="go_cnlogin()">
 				<p class="p0" style="margin-top: 0.28rem;margin-bottom: 0.16rem;"><img src="../images/order-status.png" alt="" /></p>
 				<p class="p1">我的钱包</p>
 			</li>
