问答与论坛bug

--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -443,7 +443,7 @@
 									<div class="question-forum">
 										<ul>
 											<li class="mune-active" id="btnQuestion">我的提问</li>
-											<li>我的回答</li>
+											<li data-name="showText">我的回答</li>
 										</ul>
 									</div>
 									<!--我的提问-->									
@@ -476,7 +476,7 @@
 															{{/if}}
 															<p><a href="/web/qusDetail/{{item.id}}">{{item.title}}</a></p>
 														</div>
-														<div class="list-Answer-right-text dot5" >
+														<div class="list-Answer-right-text dot6" >
 															{{item.content}}
 														</div>
 															{{if item.picture.length>0}}
