师承微信浏览器状态-分辨率控制在750

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -14,11 +14,11 @@
 	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 	<style>
 		.opacity{
-			width: 100%;
+			width: 7.5rem;
 		    height: 3.02rem;
 		    position: absolute;
 		    top: 0;
-		    left: 0;
+		    /* left: 0; */
 		    z-index: -1;
 		    background: #000;
 		    opacity: 0.2;
