帮助反馈设置--750分辨修改。

--- a/wechat/src/main/webapp/xcview/html/phone_number.html
+++ b/wechat/src/main/webapp/xcview/html/phone_number.html
@@ -13,6 +13,7 @@
   content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="keywords" content="" />
 <meta name="description" content="" />
+
 <script>
         (function(window){var setHtmlSize=function(w){var b=750/100;var c=window.innerWidth;if(w){c=w}var a=c/b;if(a<42){a=42}else if(a>60){a=60}document.querySelector("html").style.fontSize=a+"px";if(navigator.userAgent.indexOf("iPad")!=-1){document.querySelector("html").style.fontSize="60px"}};setHtmlSize();window.onresize=function(){var w=window.innerWidth;setHtmlSize(w)}}(window));
 </script>
@@ -49,9 +50,12 @@
 </style>
 </head>
 <style>
-	
+	body{
+		width: 7.5rem;
+    	margin: 0 auto;
+	}
 	.pet_name_right{
-		  position: absolute;
+		position: absolute;
 	    right: 0.2rem;
 	    top: 8rem;
 	    width: 95%;
@@ -63,39 +67,39 @@
 	    color: #fff;
 	}
 	.return_system{
-			width: 0.52rem;
-	    /*height: 0.9rem;*/
+		width: 0.52rem;
 	    display: inline-block;
 	    float: left;
 	    background: url(../images/backicon.png) no-repeat;
 	    background-size: 100% 100%;
 	  	margin-left: 0.54rem;
-			height: 0.92rem;
+		height: 0.92rem;
 	    margin-top: 0.48rem;
 	}
 	.pet_name_right1{
-		 position: absolute;
-    right: 0.2rem;
-    top: 4rem;
-    width: 6.98rem;
-    height: 0.72rem;
-    background: #00bc12;
-    line-height: 0.72rem;
-    text-align: center;
-    border-radius: 6px;
-    color: #fff;
-    font-size: 0.3rem;
-    opacity: 0.3;
+		position: absolute;
+	    left: 50%;
+	    top: 4rem;
+	    width: 6.98rem;
+	    height: 0.72rem;
+	    background: #00bc12;
+	    line-height: 0.72rem;
+	    text-align: center;
+	    border-radius: 6px;
+	    color: #fff;
+	    font-size: 0.3rem;
+	    opacity: 0.3;
+	    margin-left: -3.49rem;
 	}
 	.return_system{
-    background: url(../images/backicon.png) no-repeat;
-    background-size: 100% 100%;
-    width: 0.24rem;
-    height: 0.42rem;
-    margin-top: 0.22rem;
-    display: block;
-    margin-left: 0.26rem;
-}
+	    background: url(../images/backicon.png) no-repeat;
+	    background-size: 100% 100%;
+	    width: 0.24rem;
+	    height: 0.42rem;
+	    margin-top: 0.22rem;
+	    display: block;
+	    margin-left: 0.26rem;
+	}
 </style>
 <body class="person_body">
 	
