--- a/wechat/src/main/webapp/xcview/html/feedback.html
+++ b/wechat/src/main/webapp/xcview/html/feedback.html
@@ -18,7 +18,7 @@
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 <!-- 网页自适应JS代码引入 -->
-<link rel="stylesheet" href="/xcview/css/mui.min.css">
+<!-- <link rel="stylesheet" href="/xcview/css/mui.min.css"> -->
 <link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <!-- 刷新引入js -->
 <script src="/xcview/js/common/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
