--- a/wechat/src/main/webapp/xcview/html/phone_numbers.html
+++ b/wechat/src/main/webapp/xcview/html/phone_numbers.html
@@ -48,6 +48,10 @@
 <link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 <style>
+body{
+    width: 7.5rem;
+    margin: 0 auto;
+}
 .return_updatemobile{
  		width: 0.52rem;
     /*height: 0.9rem;*/
@@ -60,8 +64,8 @@
 	   margin-top: 0.48rem;
 }
 .pet_name_right{
-		  position: absolute;
-    right: 0.2rem;
+		position: absolute;
+    left: 50%;
     top: 4rem;
     width: 6.98rem;
     height: 0.72rem;
@@ -72,8 +76,8 @@
     color: #fff;
     font-size: 0.3rem;
     opacity: 0.3;
-    margin-right: 0;
-	}
+    margin-left: -3.49rem;
+}
 	.return_updatemobile{
 		background: url(../images/backicon.png) no-repeat;
     background-size: 100% 100%;
