--- a/wechat/src/main/webapp/xcview/html/regards.html
+++ b/wechat/src/main/webapp/xcview/html/regards.html
@@ -34,6 +34,13 @@
 <link rel="stylesheet" type="text/css" href="../css/swipeslider.css">
 <link rel="stylesheet" href="/xcview/css/css.css">
 <style>
+	body{
+		width: 7.5rem;
+		margin: 0 auto;
+	}
+	.attention_top{
+		width: 7.5rem;
+	}
 	.my_details1_img span{
 		margin-left: 0;
 		margin-top: 0.2rem;
