--- a/wechat/src/main/webapp/xcview/html/user_agree.html
+++ b/wechat/src/main/webapp/xcview/html/user_agree.html
@@ -10,6 +10,10 @@
 		margin: 0;
 		padding: 0;
 	}
+	body{
+		width: 48.5rem;
+    	margin: 0 auto;
+	}
 	.auto{
 		width: 97%;
 		margin: 0 auto;
@@ -20,16 +24,18 @@
 	
 	.p{
 		background-color: #00bc12;
-		font-size: 16pt;
-		margin: 0pt 0pt 10pt 0;
-		text-align: center;
-		/*padding: 15pt 0;*/
-		width: 100%;
-		color: #fff;
-		height: 6rem;
-    	line-height: 6rem;
-    	position: fixed;
-    	top: 0;
+	    font-size: 16pt;
+	    margin: 0pt 0pt 10pt 0;
+	    text-align: center;
+	    /* padding: 15pt 0; */
+	    width: 48.5rem;
+	    color: #fff;
+	    height: 6rem;
+	    line-height: 6rem;
+	    position: fixed;
+	    top: 0;
+	    left: 50%;
+	    margin-left: -24.25rem;
 	}
 	.p_span{
 		font-size: 3rem;
