点击头像--资料设置--微信浏览器750分辨率调整

--- a/wechat/src/main/webapp/xcview/html/change_sex.html
+++ b/wechat/src/main/webapp/xcview/html/change_sex.html
@@ -27,7 +27,12 @@
 <link rel="stylesheet" href="/xcview/css/css.css">
 <link rel="stylesheet" href="/xcview/css/tailor.css">
 <link rel="stylesheet" href="/xcview/css/personCommon.css">
-
+<style>
+  body{
+    width: 7.5rem;
+    margin: 0 auto;
+  }
+</style>
 <script>
   // 判断横屏展示时的状态
   window.onorientationchange=function(){
