--- a/wechat/src/main/webapp/xcview/html/persons.html
+++ b/wechat/src/main/webapp/xcview/html/persons.html
@@ -43,6 +43,8 @@
 <style>
 body {
 	font-size: 0.3rem;
+	width: 7.5rem;
+    margin: 0 auto;
 	/* padding: 0.25rem; */
 }
 /*content*/
@@ -672,6 +674,22 @@ pre:after {
 	}
 	.return_img{
 		margin: 0 !important;
+	}
+	.attention_top{
+		width: 7.5rem;
+	}
+	.htmleaf-container{
+		width: 7.5rem;
+	}
+	#dpage{
+		width: 7.5rem;
+	    left: 50%;
+	    margin-left: -3.75rem;
+	}
+	.mui-poppicker.mui-active{
+		width: 7.5rem;
+	    left: 50%;
+	    margin-left: -3.75rem;
 	}
 </style>
 </head>
