--- a/wechat/src/main/webapp/xcview/html/user_agree.html
+++ b/wechat/src/main/webapp/xcview/html/user_agree.html
@@ -10,10 +10,6 @@
 		margin: 0;
 		padding: 0;
 	}
-	body{
-		width: 48.5rem;
-    	margin: 0 auto;
-	}
 	.auto{
 		width: 97%;
 		margin: 0 auto;
@@ -24,18 +20,16 @@
 	
 	.p{
 		background-color: #00bc12;
-	    font-size: 16pt;
-	    margin: 0pt 0pt 10pt 0;
-	    text-align: center;
-	    /* padding: 15pt 0; */
-	    width: 48.5rem;
-	    color: #fff;
-	    height: 6rem;
-	    line-height: 6rem;
-	    position: fixed;
-	    top: 0;
-	    left: 50%;
-	    margin-left: -24.25rem;
+		font-size: 16pt;
+		margin: 0pt 0pt 10pt 0;
+		text-align: center;
+		/*padding: 15pt 0;*/
+		width: 100%;
+		color: #fff;
+		height: 6rem;
+    	line-height: 6rem;
+    	position: fixed;
+    	top: 0;
 	}
 	.p_span{
 		font-size: 3rem;
@@ -50,6 +44,29 @@
 	.auto{
 		margin-top: 8rem;
 	}
+	/* @media (max-width:750px) and (max-width: 1200px){
+	    	.p{
+			background-color: #00bc12;
+		    font-size: 16pt;
+		    margin: 0pt 0pt 10pt 0;
+		    text-align: center;
+		    width: 48.5rem;
+		    color: #fff;
+		    height: 6rem;
+		    line-height: 6rem;
+		    position: fixed;
+		    top: 0;
+		    left: 50%;
+		    margin-left: -24.25rem;
+		}
+	
+		body{
+			width: 48.5rem;
+	    	margin: 0 auto;
+		}
+	} */
+
+	
 </style>
 <script>
 	// 判断横屏展示时的状态
