--- a/wechat/src/main/webapp/xcview/html/address.html
+++ b/wechat/src/main/webapp/xcview/html/address.html
@@ -68,6 +68,10 @@
 
 	
 	<style>
+		body{
+			width: 7.5rem;
+			margin: 0 auto;
+		}
 		.site_bto_right01 span{
 			font-size: 0.24rem;
 			float: left;
@@ -128,13 +132,13 @@
 		    line-height: 0.3rem;
 		}
 		.fixed_top{
-			width: 100%;
+			width: 7.5rem;
 		    height: 0.88rem;
 		    line-height: 0.88rem;
 		    background: #fff;
 		    position: fixed;
 		    top: 0;
-		    left: 0;    
+		    /*left: 0;    */
 		    border-bottom: 1px solid #d2d2d2;
 		}
 	</style>
