--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -154,14 +154,23 @@
 	}
 	.dl{
 		position: fixed;
-		width: 100% !important;
-		top: 0;
-		text-align: center;
-		z-index: 0;
-		pointer-events:none;
+	    width: 7.5rem !important;
+	    top: 0;
+	    text-align: center;
+	    z-index: 0;
+	    pointer-events: none;
 	}
 	.my_right_img{
 		margin-top: -1.5rem;
+	}
+	.site_edit{
+		display: block;
+	    width: 7.5rem;
+	    margin: 0 auto;
+	}
+	.zx_mask{
+		width: 7.5rem;
+		margin: 0 auto;
 	}
 </style>
 
