--- a/wechat/src/main/webapp/xcview/html/mailbox.html
+++ b/wechat/src/main/webapp/xcview/html/mailbox.html
@@ -42,6 +42,10 @@
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 
 <style type="text/css">
+body{
+    width: 7.5rem;
+    margin: 0 auto;
+}
 .return {
     background: url(../images/backicon.png) no-repeat;
     background-size: 100% 100%;
