--- a/wechat/src/main/webapp/xcview/html/nickname.html
+++ b/wechat/src/main/webapp/xcview/html/nickname.html
@@ -41,6 +41,13 @@
 body {
   font-size: 0.3rem;
   /* padding: 0.25rem; */
+  /*background: #efefef;*/
+  width: 7.5rem;
+  margin: 0 auto !important;
+}
+.body{
+  /* width: 7.5rem;
+  margin: 0 auto !important; */
 }
 /*content*/
 .plugin-list {
@@ -351,6 +358,7 @@ pre:after {
 </head>
 
 <body>
+  <div class="body">
 	<div class="common0">
 		<div class="common_bg"></div>
 		<div class="common" style="height:4rem;">
@@ -377,7 +385,7 @@ pre:after {
     </div>
     <!-- 点击昵称结束 -->
 </form>    
-
+</div>
 </body>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/ajaxfileupload.js"></script>
