--- a/wechat/src/main/webapp/xcview/html/occupation_info.html
+++ b/wechat/src/main/webapp/xcview/html/occupation_info.html
@@ -42,6 +42,8 @@
 body {
   font-size: 0.3rem;
   /* padding: 0.25rem; */
+      width: 7.5rem;
+    margin: 0 auto !important;
 }
 /*content*/
 .plugin-list {
