--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2622,8 +2622,31 @@
 </div>
 
 <!--学员查看/设置上课弹窗-->
-<div class="trainee-modal hide"></div>	
-
+<div class="trainee-background hide"></div>	
+<div class="set-trainee hide">
+	<div class="trainee-close y">
+		<img src="/web/images/collection-close.png"/>
+	</div>
+	<div class="content-setClass">
+		<span style="margin-right: 30px;">是否已经上课</span>
+		<label>
+			<div class="radio-cover select-man">
+				<em></em>
+			</div>								
+			<input class="sex-select" type="radio" name="sex" id="myradio-man" value="1">
+			<span style="margin-right: 20px;">是</span>
+		</label>
+		<label>
+			<div class="radio-cover select-man">
+				<em></em>
+			</div>								
+			<input class="sex-select" type="radio" name="sex" id="myradio-man" value="1">
+			<span>否</span>
+		</label>
+	</div>
+	<button type="button" class="class-btnUp">确认</button>
+</div>
+<!--学员查看/设置上课弹窗结束-->
 <script type="text/javascript" src="/web/js/footer.js"></script>
 <script type="text/javascript" src="/web/js/placeHolder.js"></script>
 <script type="text/javascript" src="/web/js/cropbox.js"></script>
