搜索页微信浏览器750分辨率修改，线下课提交信息页添加微信提示。

--- a/wechat/src/main/webapp/xcview/html/line_class.html
+++ b/wechat/src/main/webapp/xcview/html/line_class.html
@@ -45,7 +45,7 @@
 			</div>
 			<div class="age">
 				微信号
-				<input type="tel" placeholder="请输入" />
+				<input type="text" placeholder="请输入" />
 				<div class="both"></div>
 			</div>
 			<div class="sex">
@@ -61,6 +61,10 @@
 		</div>
 		<div class="buttom opacity" data-able="1">提交</div>
 		<div class="both"></div>
+		<div class="weixin">
+			<div class="weixin_hint">如何获取您的微信号：<br />打开手机微信，选择我，在昵称下方即为您的微信号</div>
+			<div class="img"><img src="/xcview/images/weixin_hine.png" alt="" /></div>
+		</div>
 	</div>
 	<!-- 点击性别出现弹窗开始 -->
 		<div class="popup">
