--- a/wechat/src/main/webapp/xcview/html/search.html
+++ b/wechat/src/main/webapp/xcview/html/search.html
@@ -15,7 +15,9 @@
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 <!-- 网页自适应JS代码引入 -->
 
-<script src="/xcview/js/js.js?v=wechat_1.1.1"></script>
+<!--手机嵌入模板-->
+<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
+<!-- <script src="/xcview/js/js.js?v=wechat_1.1.1"></script> -->
 <script>
 	// 判断横屏展示时的状态
 	window.onorientationchange=function(){
@@ -32,7 +34,7 @@
 		margin-bottom: 0;
 	}
 	.search_history{
-		margin-top: 0.426rem;
+		margin-top: 0.2rem;
 	}
 </style>
 </head>
