购买--微信浏览器--750分辨率修改

--- a/wechat/src/main/webapp/xcview/html/purchase.html
+++ b/wechat/src/main/webapp/xcview/html/purchase.html
@@ -10,7 +10,9 @@
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<script src="/xcview/js/js.js"></script>
+
+<!--手机嵌入模板-->
+<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
 <link rel="stylesheet" type="text/css" href="/xcview/css/purchase.css" />
 <script>
