--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -42,6 +42,12 @@ $(function(){
 <link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <style>
 
+/*免费礼物文字大小*/
+.web_toast{
+	font-size: 0.5rem !important;
+}
+
+
 .leaderboard .leaderboard_list:last-child{
 	border-bottom: none;
 }
@@ -188,6 +194,7 @@ $(function(){
 #video{
 	background: none;
 }
+
 </style>
 </head>
 <body style="background: #f8f8f8;overflow: hidden1;">
@@ -247,7 +254,7 @@ $(function(){
 		<!--直播结束查看回放提示-->
 
 		<!--直播结束，正在生成回放提示-->
-		<div class="video_end_top2" style="display1: none;">
+		<div class="video_end_top2" style="display: none;">
 			<p>直播结束，正在生成回放…</p>
 			<div class="initiation" onclick="location.href ='/xcview/html/my_study.html'">学习中心</div>
 		</div>
@@ -265,7 +272,7 @@ $(function(){
 		<div class="video_end_top1" style="display: none;">
 			<div class="video_end"></div>
 			<p>直播结束,回放生成成功</p>
-			<div class="div" onclick="location.reload();">查看回放</div>
+			<div class="div"><img src="/xcview/images/refurbish.png" alt=""></div>
 		</div>
 		<!--直播结束查看回放-->
 		
