线下课--微信正则修改。

--- a/wechat/src/main/webapp/xcview/html/line_class.html
+++ b/wechat/src/main/webapp/xcview/html/line_class.html
@@ -12,6 +12,13 @@
 	<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 	<!--手机嵌入模板-->
 	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
+	<style>
+		.web_toast{
+		    width: 3.8rem;
+		    left: 50% !important;
+		    margin-left: -2rem;
+		}
+	</style>
 </head>
 <body>
 	<!-- 报名头部开始 -->
