--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -906,7 +906,7 @@
 												<!--暂无交易记录-->
 												<div class="no-order-box all-money-order hide">
 													<div class="no-order-img">
-														<img src="../../images/icon-nodata.png"/>
+														<img src="../../images/nodealHos.png"/>
 													</div>
 													<p>暂无交易记录</p>
 												</div>
