统一用户协议

--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -1261,7 +1261,7 @@
 							<script type="text/template" id="template-option">
 								<option value="">选择课程</option>
 								{{each items as item i}}
-								<option value="{{item.id}}">{{item.title}}</option>
+								<option value="{{item.id}}">{{item.courseName}}</option>
 								{{/each}}
 							</script>
 						</select>
