--- a/online-web/src/main/webapp/web/html/rechargePayPage.html
+++ b/online-web/src/main/webapp/web/html/rechargePayPage.html
@@ -91,7 +91,7 @@
 				</div>
 				<div class="tip-bottom clearfix">
 					<span>您好，报名课程须同意</span><span class="kuhao1">《</span>
-					<a href="javascript:;" class="boxuegu-protocol2">熊猫中医用户付费协议</a><span class="kuhao1">》</span>
+					<a href="javascript:;" class="boxuegu-protocol2">熊猫中医云课堂用户付费协议</a><span class="kuhao1">》</span>
 					<div class="tip-btn">同意</div>
 				</div>
 			</div>
