--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -271,7 +271,7 @@ $(function(){
 		<!--直播结束查看回放-->
 		<div class="video_end_top1" style="display: none;">
 			<div class="video_end"></div>
-			<p>直播结束,回放生成成功</p>
+			<p>直播结束,点击查看回放</p>
 			<div class="div"><img src="/xcview/images/refurbish.png" alt=""></div>
 		</div>
 		<!--直播结束查看回放-->
