--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -653,6 +653,11 @@ $(function(){
 <script type="text/javascript">
 	window.onload = function(){
 
+		$(".video_end_top1 .div img").click(function(){
+			location.reload();
+			$(".video_end_top1").hide();
+		});
+
 		$("body").scrollTop($("body").scrollHeight);
 		$(".chatmsg-box").scrollTop($(".chatmsg-box")[0].scrollHeight);
 		$(".mCSB_dragger").scrollTop($(".mCSB_dragger")[0].scrollHeight);
@@ -717,6 +722,10 @@ $(function(){
 			var school_height=$(window).height()-$(".details_cen1").height();
 			$(".pinch-zoom-container").height(school_height);
 		});
+
+		
+
+		
 	};
 </script>
 
