--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -1321,6 +1321,13 @@
 							</div>
 						</div>
 					<!--分页部分end-->
+					<!--暂无学员-->
+					<div class="no-order-box all-money-order hide">
+						<div class="no-order-img">
+							<img src="../../images/nodealHos.png"/>
+						</div>
+						<p>暂无学员</p>
+					</div>
 				</div>
 			</div>
 			
