--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -209,7 +209,7 @@
 
 									<div class="doc_address">
 										<span><em>*</em>城市</span>
-										<select name="" id="choosePro" onchange="doProvAndCityRelation(),doCityAndCountyRelation()">
+										<select name="" id="choosePro" onchange="doProvAndCityRelation()">
 
 										</select>
 
@@ -217,7 +217,7 @@
 
 										</select>
 										
-										<select name="" id="county">
+										<select name="" id="county" onchange="onchangeCountyEdit()">
 
 										</select>
 										<p class="cityWarn warning hide" style="margin-left:110px;padding-left: 0px;">所在城市地址不能为空</p>
