评价固定最底部--专辑-点赞修改色值。

--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -60,6 +60,9 @@
 					{{if lineState == 3}}
 						<p>直播回放</p>
 					{{/if}}
+					{{if lineState == 5}}
+						<p>直播预告</p>
+					{{/if}}
 				</script>
 			</div>
 			<!-- <div class="arror_return z" onclick="javascript:history.go(-1);"> -->
@@ -170,6 +173,8 @@
 						{{/if}}
 						{{if lineState == 3}}
 						<p style="width: 0.6rem;height: 0.32rem;font-size: 0.2rem;">回放</p>
+						{{/if}}{{if lineState == 5}}
+						<p style="width: 0.6rem;height: 0.32rem;font-size: 0.2rem;">预告</p>
 						{{/if}}
 					</li>
 				</ul>
