--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -14,8 +14,8 @@
 <link rel="stylesheet" href="/xcview/css/css.css?version=96a0f827c11110&version=96a0f827c0&version=96a0f827c0">
 
 
-<!-- 网页自适应JS代码引入 -->
-<script type="text/javascript" src="/xcview/js/common/js.js?version=b35e3bdc111ab&version=b35e3bdcab&version=b35e3bdcab"></script>
+<!--手机嵌入模板-->
+<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 <!-- 图片引入放大缩小 -->
 <script type="text/javascript" src="/xcview/js/common/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/underscore.js"></script>
@@ -158,14 +158,12 @@ $(function(){
 		color: #fff;
 	}
 	.video_end_top2 .initiation{
-		font-size: 0.68rem;
+		font-size: 0.28rem;
 	    color: #fff;
 	    background: #00BC12;
 	    border-radius: 8px;
-	    /* width: 1.44rem; */
-	    /* height: 0.56rem; */
-	    padding: 0.2rem;
-	    width: 3rem;
+	    padding: 0.1rem;
+	    width: 1.44rem;
 	    margin: 0 auto;
 	}
 .mCustomScrollBox{
@@ -221,11 +219,11 @@ $(function(){
 			<div class="grabble_top">
 				
 				<div class="grabble_left" onclick="isLoginJump()">  <!--onclick="isLoginJump()" ---这是上一版的返回点击事件   --> <!-- onclick="window.history.go(-1);" 这版 -->   
-					<div class="grabble_img"></div>
+					<div class="grabble_img"><img src="../images/back icon.png" alt="" /></div>
 				</div>
 
 				<span class="history_span"></span>
-				<div class="history_img_right" id="share" style=""><div class="fx_bg"></div></div>
+				<div class="history_img_right" id="share" style=""><div class="fx_bg"><img src="/xcview/images/share_img.png" alt="" /></div></div>
 			</div>
 		</div>
 	</header>
