--- a/online-web/src/main/webapp/index2.html
+++ b/online-web/src/main/webapp/index2.html
@@ -170,7 +170,7 @@
 				</div>
 
 				<!--名家坐诊部分-->
-				<div class="famous_doctor">
+				<div class="famous_doctor" style="padding: 20px 20px 0;">
 					<div class="course_title"><span class="title">名家坐诊</span>
 						<a href="javascript:;" class="more">更多&nbsp;></a>
 					</div>
@@ -211,8 +211,8 @@
 				</div>
 
 				<!--头条新闻部分开始-->
-				<div class="topLine_news">
-					<div class="course_title"><span class="title">头条新闻</span>
+				<div class="topLine_news" style="padding-bottom: 0;">
+					<div class="course_title" style="margin-bottom: 0;"><span class="title">头条新闻</span>
 						<a href="javascript:;" class="more">更多&nbsp;></a>
 					</div>
 					<ul class="topLine_news_list">
@@ -255,7 +255,7 @@
 				</div>
 
 				<!--底部的医馆部分-->
-				<div class="hospital_part">
+				<div class="hospital_part" style="padding-bottom: 0;">
 					<div class="course_title"><span class="title">医馆</span>
 						<a href="javascript:;" class="more">更多&nbsp;></a>
 					</div>
