--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -916,7 +916,7 @@
 						</table>
 					</div>
 	
-					<div class="pages course_pages" style="display: none;">
+					<div class="pages course_pages" style="display: none;padding-bottom: 20px;">
 						<div id="Pagination"  class="pagination-pages"></div>
 						<div class="searchPage">
 							<span class="page-sum">共<strong class="allPage">0</strong>页</span>
@@ -1239,7 +1239,7 @@
 						</table>
 					</div>
 				</div>
-				<div class="pages course_live_pages" style="display:none">
+				<div class="pages course_live_pages" style="display:none;padding-bottom: 20px;">
 					<div id="Pagination_live"  class="pagination-pages"></div>
 					<div class="searchPage">
 						<span class="page-sum">共<strong class="allPage">0</strong>页</span>
