--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -228,9 +228,6 @@
 <script type="text/javascript" src="/xcview/js/apprentice/inherited_introduction.js?v=wechat_1.1.24"></script>
 <script type="text/javascript" src="/xcview/js/share/share.js?v=wechat_1.1.3"></script>
 
-
-
-
 <script>
 	//需要JQ1.8版本以上兼容toggle,则引入以下代码
 $.fn.toggle = function( fn, fn2 ) {
@@ -248,4 +245,23 @@ $.fn.toggle = function( fn, fn2 ) {
     return this.click( toggle );
   };
 </script>
+<script> 
+// 控制手机物理键--返回
+window.onload = function(){
+  if(window.history && window.history.pushState) {  
+      $(window).on('popstate', function() {  
+          var hashLocation = location.hash;  
+          var hashSplit = hashLocation.split("#!/");  
+          var hashName = hashSplit[1];  
+          if(hashName !== '') {  
+              var hash = window.location.hash;  
+              if(hash === '') {  
+                  location.href ='/xcview/html/apprentice/apprentice.html'  /*跳转链接*/
+              }  
+          }  
+      });  
+      window.history.pushState('forward', null, './#forward');  
+  }
+};
+</script> 
 </html>
