--- a/online-web/src/main/webapp/web/html/Download.html
+++ b/online-web/src/main/webapp/web/html/Download.html
@@ -84,7 +84,7 @@
 <body>
 <div id="download-main">
     <div class="download-logo">
-        <a href="/index"><img src="../images/logo.png" alt=""/></a>
+        <a href="/"><img src="../images/logo.png" alt=""/></a>
     </div>
     <p  class="introduceWord">您正在使用的浏览器版本过低，除了有可能遭受病毒与恶意软件的侵袭外，
         也无法体验到网站的最佳效果。<span class="highlightword">我们推荐选择使用以下最新版本的浏览器。</span></p>
