--- a/online-web/src/main/webapp/web/html/emailRegisterSuccess.html
+++ b/online-web/src/main/webapp/web/html/emailRegisterSuccess.html
@@ -94,7 +94,7 @@
 </head>
 <body>
 <div id="email-main">
-    <a class="bxg-logo" href="/index">
+    <a class="bxg-logo" href="/">
         <img src="/web/images/pandaLogo.jpg" alt="" style="width: 150px;" />
     </a>
     <div class="email-register-info clearfix">
