--- a/online-web/src/main/webapp/web/html/qusAndAnsDetail.html
+++ b/online-web/src/main/webapp/web/html/qusAndAnsDetail.html
@@ -54,7 +54,7 @@
 
     <div class="nav-bread-top">
         <!--<span class="glyphicon my-glyphicon-home" aria-hidden="true"></span>-->
-      <!--  <a href="/index">首页</a>
+      <!--  <a href="/">首页</a>
         <span class="glyphiconRight"><span> > </span></span>-->
         <a href="/web/html/ansAndQus.html">问答</a>
         <span class="glyphiconRight"><span> > </span></span>
