--- a/online-web/src/main/webapp/web/html/resetPassword.html
+++ b/online-web/src/main/webapp/web/html/resetPassword.html
@@ -28,7 +28,7 @@
 <div id="resetPasswordBox">
     <div class="login-logImg clearfix">
         <div class="leftline"></div>
-        <a href="/index"><img class="logo"src="/web/images/pandaLogo.jpg" alt=""/></a>
+        <a href="/"><img class="logo"src="/web/images/pandaLogo.jpg" alt=""/></a>
         <div class="rightline"></div>
     </div>
     <div class="resetPassword">
