--- a/online-web/src/main/webapp/web/html/ansAndQus.html
+++ b/online-web/src/main/webapp/web/html/ansAndQus.html
@@ -29,7 +29,7 @@
 <div class="page-ans-qus">
     <ul class="my-ans-nav">
         <!--<li class="my-ans-nav-1">
-            <a href="/index">首页</a>
+            <a href="/">首页</a>
         </li>
         <li class="glyphiconRight"><span> > </span></li>
         <li class="my-ans-nav-2"><span style="font-size: 12px;color:#999;">问答</span></li>-->
