--- a/online-web/src/main/webapp/web/html/bindAccount.html
+++ b/online-web/src/main/webapp/web/html/bindAccount.html
@@ -25,7 +25,7 @@
 <body>
 <div class="bindAccountNav clearfix">
     <div class="bindAccountNavInner">
-        <a href="/index" class="bindLogin">
+        <a href="/" class="bindLogin">
             <img src="/web/images/pandaLogo.jpg"  alt=""/>
         </a>
 
