--- a/online-web/src/main/webapp/web/html/email_resetpassword.html
+++ b/online-web/src/main/webapp/web/html/email_resetpassword.html
@@ -147,7 +147,7 @@
 <body>
 <div class="header">
     <div class="header_body">
-        <a href="/index"><img src="../images/boxuegulogo-email.png"></a>
+        <a href="/"><img src="../images/boxuegulogo-email.png"></a>
         <span>重置密码</span>
     </div>
 
