--- a/online-web/src/main/webapp/web/html/login.html
+++ b/online-web/src/main/webapp/web/html/login.html
@@ -93,7 +93,7 @@
 <div id="loginBox">
     <div class="login-logImg clearfix">
         <div class="leftline"></div>
-        <a href="/index"><img class="logo"src="/web/images/pandaLogo.jpg" alt=""/></a>
+        <a href="/"><img class="logo"src="/web/images/pandaLogo.jpg" alt=""/></a>
         <div class="rightline"></div>
     </div>
     <div class="login-changeTab">
