--- a/online-web/src/main/webapp/web/html/quiz.html
+++ b/online-web/src/main/webapp/web/html/quiz.html
@@ -46,7 +46,7 @@
     <div class="quiz-nav">
         <ul>
       <!--      <li>
-                <a href="/index">首页</a>
+                <a href="/">首页</a>
             </li>
             <li class="glyphiconRight">></li>-->
             <li>
