--- a/wechat/src/main/webapp/xcview/html/live_audio.html
+++ b/wechat/src/main/webapp/xcview/html/live_audio.html
@@ -164,7 +164,7 @@
 		<script type="text/html" id="data_name">
 			
 			{{if collection == true}}
-			<ul class="playTime z" style="border-top: 0.01rem solid #D8DDE6;">
+			<ul class="playTime z" style="margin-bottom: 0.2rem;">
 				<li><img src="../images/population.png"/><span>共{{courseNumber}}集</span></li>
 				<li>
 					<a href="course_outline.html?courseId={{id}}">
