--- a/online-web/src/main/webapp/web/html/errors-pages.html
+++ b/online-web/src/main/webapp/web/html/errors-pages.html
@@ -53,6 +53,10 @@
 				line-height: 48px;
 				border-radius: 100px;
 			}
+			.wrap-jump a:hover{
+				background: #00BC12;
+				color: white;
+			}
 			.wrap-jump a:nth-child(1){
 				float: left;
 				margin-left: 30px;
@@ -72,7 +76,7 @@
 			<img src="/web/images/app_anchor.png"/ alt="报错">
 		</div>
 		<div class="wrap-jump">
-			<a href="web/images/index.html">返回首页</a>
+			<a href="">返回首页</a>
 			<a href="">返回上一页</a>
 		</div>
 		
